--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "dotenv": "^8.0.0",
     "graphql-yoga": "^1.18.1"
   },
   "devDependencies": {
