--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.1",
     "merge-graphql-schemas": "^1.7.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
   },
   "scripts": {
     "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn deploy && yarn generate",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
