--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma-client-lib": "^1.34.5"
   },
   "devDependencies": {
+    "lodash": "^4.17.15",
     "nodemon": "^1.19.1"
   },
   "scripts": {
